spec/e2e/variable/let.lit
let b = 20
println b # expect: 20
b = 30 # error: [line 3] Runtime error: Can't reassign 'b' because it is declared with 'let'.
